# chess-engine

./: .gitignore  CMakeLists.txt
src/: main.cpp
